fix: sonarlint Web:S6825

--- a/Maus.Server/Views/Shared/FormSubmitDirectly.cshtml
+++ b/Maus.Server/Views/Shared/FormSubmitDirectly.cshtml
@@ -13,7 +13,7 @@
 <form action="@Model.ActionUrl" method="post">
     @foreach (var input in Model.NameValues)
     {
-        <input type="hidden" name="@input.Key" value="@input.Value"/>
+        <input type="hidden" name="@input.Key" value="@input.Value" tabindex="-1"/>
     }
 </form>
 
