feat(EcPay): rename BankCode

--- a/Maus.Web/Views/Payment/Index.cshtml
+++ b/Maus.Web/Views/Payment/Index.cshtml
@@ -25,7 +25,7 @@
     <label>
         BankCode:
         <input type="text"
-               name="@(nameof(PaymentTestRequest.SubMethodCode))"
+               name="@(nameof(PaymentTestRequest.BankCode))"
                value="Unspecified"/>
     </label>
     <br/>
